# semantic-router

./: .env.example  .gitignore  .pre-commit-config.yaml  .pydoc-markdown.yml  .readthedocs.yaml  00_performance_tests.ipynb  00_walkthrough.ipynb  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  bedrock.ipynb  commitlint.config.js  compose.yaml  coverage.xml  diff-config.yaml  pyproject.toml  replace.py  results1.csv  setup.py  test_output.json  test_output.yaml  test_svm.ipynb  walkthrough.ipynb
.dagger/: dagger.json  pyproject.toml
.dagger/src/hello_dagger/: __init__.py  main.py
.dagger/src/semantic_router_ci/: __init__.py  main.py
.github/workflows/: conventional_commits.yml  diff.yml  docs.yml  lint.yml  pr_agent.yml  release.yml  test.yml  triggers_merge.yml  triggers_pr.yml
decision_layer/: __init__.py  decision_layer.py  schema.py
decision_layer/encoders/: __init__.py  base.py  cohere.py  huggingface.py  openai.py
docs/: 00-introduction.ipynb  00_introduction.ipynb  00a-introduction-local.ipynb  01-save-load-from-file.ipynb  01_save_load_from_file.ipynb  02-dynamic-routes.ipynb  02_dynamic_routes.ipynb  03-async-dynamic-routes.ipynb  03-basic-langchain-agent.ipynb  04-chat-history.ipynb  05-local-execution.ipynb  06-threshold-optimization.ipynb  07-multi-modal.ipynb  07-ollama-local-execution.ipynb  07-route-conversations-by-topic.ipynb  07-scaling-and-pinecone.ipynb  07-threshold-optimization.ipynb  08-async-dynamic-routes.ipynb  08-multi-modal.ipynb  08-save-load-from-hf.ipynb  09-route-filter.ipynb  10-debugging-discord-issue.ipynb  10-dynamic-routes-via-openai-function-calling.ipynb  10-pinecone-local.ipynb  10-sparse-threshold-optimization-guardrails.ipynb  introduction.md  route_layer.md  test.ipynb
docs/encoders/: aurelio-bm25.ipynb  bedrock.ipynb  cohere.ipynb  fastembed.ipynb  gigachat.ipynb  google.ipynb  huggingface-endpoint.ipynb  huggingface.ipynb  jina-encoder.ipynb  local-encoder.ipynb  mistral-encoder.ipynb  nvidia_nim-encoder.ipynb  openai-embed-3.ipynb  openai-encoder.ipynb  vision-transformer.ipynb  voyage-encoder.ipynb  yandex.ipynb
docs/essentials/: dynamic-routes.md  local-execution.md  migration-to-v1.md  quickstart.md  route-filter.md  save-load-from-file.md  semantic-router.md  sync.md  threshold-optimization.md
docs/examples/: conversation-topic-splitter.ipynb  function_calling.ipynb  hybrid-chat-guardrails.ipynb  hybrid-layer.ipynb  hybrid-router.ipynb  ollama-local-execution.ipynb  pinecone-and-scaling.ipynb  pinecone-hybrid.ipynb  rolling-window-splitter.ipynb  route_config.json  router.json  semactic_splitter.ipynb  test.ann  text_semantic_split.ipynb  topic_bounding.ipynb  unstructured-element-splitter.ipynb
docs/examples/data/: memory.md  psd.md
docs/get-started/: introduction.md  quickstart.md
docs/indexes/: local.ipynb  pinecone-async.ipynb  pinecone-local.ipynb  pinecone-sync-routes.ipynb  pinecone.ipynb  pinecone_async.ipynb  postgres-sync.ipynb  postgres.ipynb  qdrant.ipynb
docs/indexes/postgres/: Dockerfile  postgres.compose.yaml  postgres.ipynb
docs/integrations/: aurelio.md  bedrock.md  cohere.md  integrations.md  jina.md  litellm.md  local.md  minimax.md  mistral.md  nvidia.md  ollama.md  openai.md  pinecone.md  postgres.md  pydantic-ai.md  qdrant.md  voyage.md
docs/integrations/agents-sdk/: hybrid-router-guardrails.ipynb  semantic-router-guardrail.ipynb
docs/integrations/graphai/: sparse-threshold-optimization-guardrail-graphai.ipynb
docs/integrations/pydantic-ai/: chatbot-with-guardrails.ipynb  sparse-threshold-optimization-guardrails-pydantic-ai.ipynb
docs/source/: api.rst  conf.py  index.rst  migration_to_v1.rst  quickstart.rst  requirements.txt  route_layer.md  route_layer.rst
docs/source/_autosummary/: semantic_router.encoders.AutoEncoder.rst  semantic_router.encoders.base.rst  (+114 more)
docs/user-guide/: changelog.md
performance_tests/: 01 test_dynamic_routes_prompts copy.ipynb
scripts/: run_tests.sh
semantic_router/: __init__.py  hybrid_layer.py  layer.py  linear.py  route.py  schema.py  text.py  tokenizers.py
semantic_router/encoders/: __init__.py  aurelio.py  azure.py  azure_openai.py  base.py  bedrock.py  bm25.py  clip.py  cohere.py  encode_input_type.py  fastembed.py  gigachat.py  google.py  hfendpointencoder.py  huggingface.py  jina.py  litellm.py  local.py  minimax.py  mistral.py  nvidia_nim.py  ollama.py  openai.py  sentence_transformers.py  sparse_sentence_transformer.py  tfidf.py  torch.py  triton_inference.py  vit.py  voyage.py  voyageai.py  yandex.py  zure.py
semantic_router/index/: __init__.py  base.py  hybrid_local.py  local.py  milvus.py  pinecone.py  pinecone_local.py  postgres.py  qdrant.py
semantic_router/indices/: base.py  local_index.py  pinecone.py
semantic_router/llms/: __init__.py  base.py  cohere.py  llamacpp.py  minimax.py  mistral.py  ollama.py  openai.py  openrouter.py  requesty.py  unify.py  zure.py
semantic_router/matchers/: base.py  ranker_only.py  two_stage.py
semantic_router/rankers/: base.py  cohere.py
semantic_router/retrievers/: __init__.py  base.py  bm25.py  cohere.py  huggingface.py  openai.py
semantic_router/routers/: __init__.py  base.py  hybrid.py  semantic.py
semantic_router/schemas/: encoder.py  route.py  semantic_space.py
semantic_router/splitters/: __init__.py  base.py  cav_sim.py  consecutive_sim.py  cumulative_sim.py  dynamic_cumulative.py  rolling_window.py  running_avg_sim.py  unstructured_splitter.py  utils.py
semantic_router/utils/: defaults.py  function_call.py  llm.py  logger.py  splitters.py
tests/: conftest.py  test_layer.py  test_schema.py
tests/encoders/: test_base.py  test_cohere.py  test_openai.py
tests/functional/: test_layer.py  test_linear.py
tests/integration/: 57640.4032.txt  test_minimax_integration.py  test_router.py  test_router_integration.py
tests/unit/: test_function_schema.py  test_hybrid_layer.py  test_layer.py  test_pinecone.py  test_qdrant_index.py  test_route.py  test_route_config.py  test_router.py  test_schema.py  test_splitters.py  test_sync.py  test_text.py  test_tokenizers.py
(+58 files in other folders)
